# Ferris-AO

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml
.github/workflows/: release.yml
data/: areas.toml  backgrounds.txt  censor.txt  characters.txt  music.txt
nginx/: hatsune.miku.pizza  miku.pizza  nyahao.conf
src/: client.rs  cluster.rs  config.rs  main.rs  ms.rs  ratelimit.rs  server.rs
src/auth/: accounts.rs  mod.rs
src/commands/: mod.rs  registry.rs
src/game/: areas.rs  characters.rs  mod.rs
src/moderation/: bans.rs  ipid_bans.rs  mod.rs  watchlist.rs
src/network/: mod.rs  tcp.rs  websocket.rs
src/privacy/: hashing.rs  mod.rs
src/protocol/: handlers.rs  mod.rs  packet.rs
src/storage/: db.rs  mod.rs
