[package]
name = "nyahao"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio              = { version = "1",    features = ["full"] }
tokio-tungstenite  = { version = "0.26", features = ["native-tls"] }
tungstenite        = { version = "0.26", features = ["native-tls"] }
ppp                = "2.3"
serde              = { version = "1", features = ["derive"] }
toml               = "0.8"
hmac               = "0.12"
sha2               = "0.10"
hex                = "0.4"
argon2             = "0.5"
redb               = "2"
aes-gcm            = "0.10"
rand               = "0.8"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror          = "1"
anyhow             = "1"
chrono             = { version = "0.4", features = ["serde"] }
serde_json         = "1"
futures-util       = { version = "0.3", default-features = false, features = ["sink", "std"] }
reqwest            = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
